2006-12-14  J. Tang  <jtang@tresys.com>

	* Added apol_policy_path_t object.  This is needed because policy
	paths are not just a single string, but rather a base policy and
	any number of modules.

	* New functions apol_config_join_var() generalized to be
	apol_str_join().  Same with apol_config_split_var() ->
	apol_str_split().

2006-12-12  J. Tang  <jtang@tresys.com>

	* Renamed qpol_find_default_policy_file() in qpol/policy.h to
	qpol_default_policy_find() in qpol/util.h.  Removed
	qpol_find_default_policy_file_strerr().  These functions were
	never supposed to be in these locations.

	* Deprecated apol_policy_is_binary(); use qpol policy capabilities
	instead.

	* Deprecated qpol_open_policy_from_file(); it is now called
	qpol_policy_open_from_file().  Similar change to
	qpol_open_policy_from_file_no_rules() and
	qpol_open_policy_from_memory().

	* Merged qpol/policy_query.h into qpol/policy.h.  Split module
	related code into qpol/module.h.

	* Rewrite of seaudit to utilize libseaudit.so.4; tweaked numerous
	interface issues.

	* Rewrite of libseaudit to meet coding standards.  libseaudit.so.4
	is now a shared object file with proper namespacing.

2006-12-11  J. Mowery  <jmowery@tresys.com>

	* Added qpol_policy_has_capability() to qpol/policy_query.h
	This function and the enumeration qpol_capability_e allows
	a user of the library to check if a loaded policy is
	capable of supporting various policy features.

	* Support has been added to libqpol for loading policy modules.
	See qpol/policy.h for details.

2006-12-01  J. Tang  <jtang@tresys.com>

	* deprecated apol_config_get_varlist() and
	apol_config_varlist_to_str(); added apol_file_find_path(),
	apol_config_split_var(), and apol_config_join_var()

2006-12-01  J. Tang  <jtang@tresys.com>

	* Official release of SETools 3.0.1.

2006-11-29  J. Tang  <jtang@tresys.com>

	* synced source parser to libsepol 1.15.2.

2006-11-27  J. Tang  <jtang@tresys.com>
